fix scroll x issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
   max-width: 80rem;
   z-index: 1;
   overflow: visible; }
+  @media screen and (max-width: 768px) {
+    .main {
+      overflow-x: hidden; } }
 
 .content {
   font-size: 2rem;
